force-app/main/default/objects/Product2/fields/Is_Regional_Restricted__c.field-meta.xml
<CustomField>
    <fullName>Is_Regional_Restricted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, the product must have at least one Published Product Availability before it is entitled in Commerce.</description>
    <label>Regionally Restricted</label>
    <type>Checkbox</type>
</CustomField>