force-app/main/default/objects/Product2/fields/Origin_Region__c.field-meta.xml
<CustomField>
    <fullName>Origin_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary origin region. Not a sharing key on Product2. Used by list views, lookup filters, and validation rules.</description>
    <label>Origin Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Origin Products</relationshipLabel>
    <relationshipName>Origin_Products</relationshipName>
    <type>Lookup</type>
</CustomField>