force-app/main/default/objects/Product2/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source farm or artisan. Informational only; do not use Product2 sharing to isolate this lookup. Regional access is enforced on Product Availability and Commerce entitlements.</description>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplied Products</relationshipLabel>
    <relationshipName>Supplied_Products</relationshipName>
    <type>Lookup</type>
</CustomField>